# Dicoding_test

./: .gitignore  README.md  dashboard.py  file.py  notebook.ipynb  notebook.py  requirements.txt  setup.py  streamlit_app.py
dashboard/: dashboard.py  pyproject.toml
data/: products_dataset.csv
